--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
   "devDependencies": {
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.0",
-    "prisma": "^5.10.2"
+    "prisma": "^5.10.2",
+    "standard": "^17.1.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "zod": "^3.22.4"
+  },
+  "eslintConfig": {
+    "exextends": [
+      "standard"
+    ]
   }
 }
