--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.11",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
